Bug:  881926 Reviewer:  Self Comments:  Fixed truncation issues with breadcrumb tree browser.
Files:
M    gwt/src/org/kablink/teaming/gwt/client/GwtMainPage.java
M    gwt/src/org/kablink/teaming/gwt/client/widgets/AdminControl.java
M    gwt/src/org/kablink/teaming/gwt/client/workspacetree/BreadcrumbTreePopup.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -2388,6 +2388,9 @@ body, table td, select
 }
 
 /* Styles used by the bread crumb navigator. */
+.breadCrumbTreePopup {
+	overflow: auto !important;
+}
 .mainBreadCrumb_Tree
 {
 	padding: 5px;
